src/test/ui/generator/type-mismatch-signature-deduction.stderr
error[E0308]: mismatched types
  --> $DIR/type-mismatch-signature-deduction.rs:13:9
   |
LL |         5
   |         ^ expected enum `std::result::Result`, found integer
   |
   = note: expected type `std::result::Result<{integer}, _>`
              found type `{integer}`

error[E0271]: type mismatch resolving `<[generator@$DIR/type-mismatch-signature-deduction.rs:6:5: 14:6 _] as std::ops::Generator>::Return == i32`
  --> $DIR/type-mismatch-signature-deduction.rs:5:13
   |
LL | fn foo() -> impl Generator<Return = i32> {
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected enum `std::result::Result`, found `i32`
   |
   = note: expected enum `std::result::Result<{integer}, _>`
              found type `i32`
   = note: the return type of a function must have a statically known size

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0271, E0308.
For more information about an error, try `rustc --explain E0271`.
